--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-test
+<div id="app">
+  {{ message }}
+</div>
+var app = new Vue({
+  el: '#app',
+  data: {
+    message: 'Hello!'
+  }
+})
+<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
