--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<div id="app">
-  {{ message }}
-</div>
-var app = new Vue({
+<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+<script type="text/javascript">
+  var app = new Vue({
   el: '#app',
   data: {
     message: 'Hello!'
   }
 })
-<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+</script>
+<div id="app">
+  {{ message }}
+</div>
