--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-<script type="text/javascript">
-  var app = new Vue({
-  el: '#app',
-  data: {
-    message: 'Hello!'
-  }
-})
-</script>
-<div id="app">
-  {{ message }}
-</div>
+<html>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+  <head>
+  <body>
+    <script type="text/javascript">
+      var app = new Vue({
+        el: '#app',
+        data: {
+          message: 'Hello!'
+        }
+      })
+    </script>
+    <div id="app">
+      {{ message }}
+    </div>
+  </body>
+</html>
