--- a/go.html
+++ b/go.html
@@ -8,7 +8,7 @@
   <head>
   <body>
     <ul class="nav nav-tabs">
-      <li role="presentation"><a href="#">Home</a></li>
+      <li role="presentation"><a href="index.html">Home</a></li>
       <li role="presentation" class="active"><a href="go.html">Go</a></li>
       <li role="presentation"><a href="php.html">PHP</a></li>
     </ul>
